# apihub

./: .gitignore  pyproject.toml
apihub/: __init__.py  exceptions.py
xp/backend/s3/: backend.yaml
xp/project/ahdatavol/: Pulumi.dev.yaml  Pulumi.yaml
xp/project/apihub/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  xpulumi-project.yaml
xp/project/apihub/runtime/one-time-init/: main.py  requirements.txt
xp/project/apihub/runtime/systemd/: cloudservice.service  dc.sh  docker-compose.yml  stop.sh  up.sh
xp/project/apihub/runtime/systemd/demo/: Dockerfile
xp/project/apihub/runtime/systemd/demo/src/: index.html  keycloak.json
xp/project/apihub/runtime/systemd/keycloak-init/: Dockerfile  build.sh  keycloak-init.py  requirements.txt
xp/project/apihub/runtime/systemd/traefik-dashboard/: nginx.conf
